--- a/trunk/Express/src/admin.mxml
+++ b/trunk/Express/src/admin.mxml
@@ -5,5 +5,5 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Button x="284" y="182" label="Button"/>
+	<s:Button x="284" y="182" label="test"/>
 </s:WindowedApplication>
